--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  dio: ^5.9.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.2
   gap: ^3.0.1
+  shared_preferences: ^2.5.3
   svg_flutter: ^0.0.1
 
 dev_dependencies:
